# Weathered

./: .gitignore  AppController.cpp  AppController.h  CMakeLists.txt  README.md  docker-compose-DEV.yml  docker-compose.yml  llama.dockerfile  main.cpp  weathered.dockerfile
Qml/: ClothingBox.qml  Main.qml  QuoteBox.qml  WeatherBox.qml  WeatherDelegate.qml
Quote-Service/: QuoteManager.cpp  QuoteManager.h  lmManager.cpp  lmManager.h
Weather-Service/: ApiAccess.hpp  Weather.cpp  Weather.h  WeatherApi.cpp  WeatherApi.h  WeatherDay.cpp  WeatherDay.h  WeatherDayModel.cpp  WeatherDayModel.h  WeatherFilterModel.cpp  WeatherFilterModel.h  WeatherModel.cpp  WeatherModel.h
app/: .dockerignore  ApiAccess.hpp  AppController.cpp  AppController.h  CMakeLists.txt  Dockerfile  docker-compose-DEV.yml  docker-compose.yml  main.cpp
app/Lm-Service/: lmManager.h
app/News-Service/: News.cpp  News.h  NewsModel.cpp  NewsModel.h
app/Qml/: ClothingBox.qml  Main.qml  NewsBox.qml  NewsDelegate.qml
app/Weather-Service/: WeatherDay.h  WeatherDayModel.h  WeatherModel.cpp  WeatherModel.h
app/docker/: Dockerfile  docker-compose.yml
yocto-build/: .dockerignore  docker-compose.yml  setup-layers.json  yocto-build.dockerfile
